--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.2",
     "sqlite3": "^5.1.6",
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
